syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.epam.javaAdvanced.grpc";
option java_outer_classname = "SimpleGrpcProto";

service PingPongService {
  rpc SayPong(PingPongRequest) returns (PingPongResponse){

  }
}

message PingPongRequest {
  string message = 1;
}

message PingPongResponse {
  string message = 1;
}
